[package]
name = "simple_http_checker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
curl = "0.4.38"
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"